fixing modal scrollbar

--- a/src/assets/scss/blocks/modal.scss
+++ b/src/assets/scss/blocks/modal.scss
@@ -7,7 +7,11 @@
     top: 0;bottom: 0;
     right: 0;left: 0;
 
-    overflow: scroll;
+    width: 100%;
+    height: auto;
+
+    overflow-y: scroll;
+    overflow-x: hidden;
     display: flex;
     padding: 50px 0;
 
@@ -24,8 +28,6 @@
             opacity: 1;
         }
     }
-
-    &::-webkit-scrollbar { display: none }
 
     &__container {
         background-color: white;
